--- a/07-Omnifood_v8/css/general.css
+++ b/07-Omnifood_v8/css/general.css
@@ -142,6 +142,7 @@ strong {
 	margin-bottom: 1.8rem;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
 	display: inline-block;
@@ -150,6 +151,12 @@ strong {
 	font-weight: 500;
 	padding: 1.8rem 3.2rem;
 	border-radius: 9px;
+	
+	/* button element */
+	border: none;
+	cursor: pointer;
+	font-family: inherit;
+	
 	transition: all 0.3s;
 }
 
@@ -174,6 +181,18 @@ strong {
 .btn--outline:active {
 	background-color: transparent;
 	box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+	background-color: #45260a;
+	color: #fdf2e9;
+	align-self: end;
+	padding: 1.2rem;
+}
+
+.btn--form:hover {
+	background-color: #fff;
+	color: #333;
 }
 
 .link:link,
