--- a/07-Omnifood_v8/css/style.css
+++ b/07-Omnifood_v8/css/style.css
@@ -435,7 +435,7 @@
 /* ***************** */
 
 .section-cta {
-    padding: 9.6rem 0;
+    padding: 9.6rem 0 12.8rem 0;
 }
 
 .cta {
@@ -506,3 +506,84 @@ input::placeholder {
     background-position: center;
     background-size: cover;
 }
+
+/* ***************** */
+/* FOOTER     		 */ 
+/* ***************** */
+
+.footer {
+	padding: 12.8rem 0;
+	border-top: 1px solid #ddd;
+}
+
+.grid--footer {
+	grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer-logo {
+	display: block;
+	margin-bottom: 2.4rem;
+}
+
+.social-links {
+	list-style: none;
+	display: flex;
+	column-gap: 1.8rem;
+	margin-bottom: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+	text-decoration: none;
+	font-size: 1.8rem;
+	color: #767676;
+	font-style: normal;
+	transition: all 0.3;
+}
+
+.footer-link:hover,
+.footer-link:active {
+	color: #555;
+}
+
+.social-icon {
+	height: 2.2rem;
+	width: 2.2rem;
+	color: #6f6f6f;
+}
+
+.copyright {
+	margin-top: auto;
+	font-size: 1.4rem;
+}
+
+.footer-heading {
+	font-size: 1.8rem;
+	font-weight: 500;
+	color: #6f6f6f;
+	margin-bottom: 3.8rem;
+}
+
+.contacts {
+	line-height: 1.5;
+}
+
+.address {
+	font-size: 1.6rem;
+	font-style: normal;
+	line-height: 1.6;
+	margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	row-gap: 2.4rem;
+}
+
