--- a/07-Omnifood_v8/css/style.css
+++ b/07-Omnifood_v8/css/style.css
@@ -18,7 +18,7 @@
 .main-nav-list {
     list-style: none;
     display: flex;
-    column-gap: 1.8rem;
+    column-gap: 2.4rem;
 }
 
 .main-nav-link:link,
@@ -54,7 +54,7 @@
 
 .section-hero {
     background-color: #fdf2e9;
-    padding: 4.8rem 0;
+    padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
@@ -64,6 +64,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 9.6rem;
     align-items: center;
+	padding: 0 3.2rem;
 }
 
 .hero-description {
@@ -384,6 +385,22 @@
 
 .pricing-plan--complete {
     background-color: #fdf2e9;
+	position: relative;
+	overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+	content: "Best value";
+	text-transform: uppercase;
+	padding: 1.2rem 6.4rem;
+	background-color: #51cf66;
+	position: absolute;
+	top: 5%;
+	right: -13%;
+	transform: rotate(45deg);
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: #fdf2e9;
 }
 
 .plan-header {
