--- a/07-Omnifood_v2/css/general.css
+++ b/07-Omnifood_v2/css/general.css
@@ -63,6 +63,7 @@ html {
     /* 10px / 16px (browser font) = 0.625 = 62.5% */
     /* percentage of user's browser font-size setting */
     font-size: 62.5%;
+	overflow-x: hidden;
 }
 
 body {
@@ -70,6 +71,9 @@ body {
     line-height: 1;
     font-weight: 400;
     color: #555;
+
+	/* only works if there is nothing absolutely positioned in relation to body */
+	overflow-x: hidden;
 }
 
 /* ****************************** */
@@ -238,6 +242,7 @@ body {
 	display: flex;
 	align-items: center;
 	gap: 1.6rem;
+	line-height: 1.2;
 }
 
 .list-icon {
