--- a/07-Omnifood_v2/css/style.css
+++ b/07-Omnifood_v2/css/style.css
@@ -11,6 +11,7 @@
     /* the height is set because we will make it sticky */
     height: 9.6rem;
     padding: 0 4.8rem;
+	position: relative;
 }
 
 .logo {
@@ -56,6 +57,26 @@
 .main-nav-link.nav-cta:active {
     background-color: #cf711f;
 }
+
+/* MOBILE */
+.btn-mobile-nav {
+	border: none;
+	background: none;
+	cursor: pointer;
+
+	display: none;
+}
+
+.icon-mobile-nav {
+	height: 4.8rem;
+	width: 4.8rem;
+	color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+	display: none;
+}
+
 
 /* ******************* */
 /* HERO                */
